# engineering-intelligence-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-modular-monolith-and-hexagonal-architecture.md  ADR-002-postgresql-and-pgvector-vector-storage.md
domain/ingestion/entities/: document.py
domain/ingestion/ports/: document_repository.py  file_storage.py  upload_document.py
domain/ingestion/use_cases/: upload_document.py
infrastructure/database/repositories/: in_memory_document_repository.py
infrastructure/storage/local/: local_file_storage.py
src/eih/: config.py  main.py
tests/unit/: test_health.py
